fix: add links to header

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +9,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
   <header>
     <div class="header_left">
-      <img src="img/logo.svg" alt="logo">
+      <a href="index.html">
+        <img src="img/logo.svg" alt="logo">
+      </a>
     </div>
     <div class="header_center">
       <nav class="navbar">
         <ul>
-          <li><a href="about">Об ОЭЗ</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Площадки</a></li>
-          <li><a href="#">Резиденты</a></li>
-          <li><a href="#">Вакансии</a></li>
-          <li><a href="#">Партнеры</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="about.html">Об ОЭЗ</a></li>
+          <li><a href="services.html">Услуги</a></li>
+          <li><a href="platforms.html">Площадки</a></li>
+          <li><a href="residents.html">Резиденты</a></li>
+          <li><a href="vacancies.html">Вакансии</a></li>
+          <li><a href="partners.html">Партнеры</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -36,7 +40,8 @@
     <section class="hero">
       <div class="hero_left">
         <img src="img/logo_large.svg" alt="large logo">
-        <p>Добро пожаловать в Титановую Долину — уникальную особую экономическую зону промышленно-производственного типа в Свердловской области!</p>
+        <p>Добро пожаловать в Титановую Долину — уникальную особую экономическую зону промышленно-производственного типа
+          в Свердловской области!</p>
       </div>
       <div class="hero_right">
         <a class="button" href="#">
@@ -59,7 +64,8 @@
               <h2>01</h2>
               <h3>Разнообразная сырьевая база Свердловской области</h3>
             </div>
-            <div class="advantages_item_text">Возможность открытия производства вблизи крупнейшего  в мире производителя титана ПАО «Корпорация ВСМПО-АВИСМА» </div>
+            <div class="advantages_item_text">Возможность открытия производства вблизи крупнейшего  в мире производителя
+              титана ПАО «Корпорация ВСМПО-АВИСМА» </div>
           </div>
           <div class="advantages_item">
             <div class="advantages_item_title">
@@ -80,14 +86,16 @@
               <h2>04</h2>
               <h3>Развитая программа кадрового обеспечения производства</h3>
             </div>
-            <div class="advantages_item_text">Возможность укомплектовать производство квалифицированным производственным и обслуживающим персоналом в согласованные сроки</div>
+            <div class="advantages_item_text">Возможность укомплектовать производство квалифицированным производственным
+              и обслуживающим персоналом в согласованные сроки</div>
           </div>
           <div class="advantages_item">
             <div class="advantages_item_title">
               <h2>05</h2>
               <h3>Альтернативные логистические пути с учетом введения санкций</h3>
             </div>
-            <div class="advantages_item_text">Возможность использовать подъездной железнодорожный путь и контейнерную площадку</div>
+            <div class="advantages_item_text">Возможность использовать подъездной железнодорожный путь и контейнерную
+              площадку</div>
           </div>
         </div>
       </div>
@@ -238,21 +246,21 @@
     <div class="footer_col">
       <nav class="footer_nav">
         <ul>
-          <li><a href="#">Об ОЭЗ</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Площадки</a></li>
-          <li><a href="#">Резиденты</a></li>
+          <li><a href="about.html">Об ОЭЗ</a></li>
+          <li><a href="services.html">Услуги</a></li>
+          <li><a href="platforms.html">Площадки</a></li>
+          <li><a href="residents.html">Резиденты</a></li>
         </ul>
       </nav>
     </div>
     <div class="footer_col">
       <nav class="footer_nav">
         <ul>
-          <li><a href="#">Вакансии</a></li>
-          <li><a href="#">Партнеры</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Контакты</a></li>
-          <li><a href="#">Политика конфиденциальности</a></li>
+          <li><a href="vacancies.html">Вакансии</a></li>
+          <li><a href="partners.html">Партнеры</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="privacy.html">Политика конфиденциальности</a></li>
         </ul>
       </nav>
     </div>
@@ -261,4 +269,5 @@
     </div>
   </footer>
 </body>
+
 </html>
