--- a/platforms.html
+++ b/platforms.html
@@ -32,8 +32,8 @@
       </nav>
     </div>
     <div class="header_right">
-      <img src="img/search.svg" alt="search">
-      <img src="img/profile.svg" alt="profile">
+      <a href="search.html"><img src="img/search.svg" alt="search"></a>
+      <a href="account.html"><img src="img/profile.svg" alt="profile"></a>
     </div>
   </header>
   <main>
