--- a/partners.html
+++ b/partners.html
@@ -41,7 +41,7 @@
       <p>Главная/Партнеры</p>
       <h1>Партнеры</h1>
     </section>
-    <section class="partners">
+    <section class="partners_page">
       <div class="advantages_item">
         <div class="advantages_item_title">
           <h2>01</h2>
